More features included
Signed-off-by: Sujith Gunawardhane <sujithsg@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,24 @@ set_target_properties(test_escape_sequences PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests
 )
 
+add_executable(test_control_flow ${TESTS_DIR}/test_control_flow.cpp)
+target_link_libraries(test_control_flow PRIVATE CxxScript GTest::gtest_main)
+set_target_properties(test_control_flow PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests
+)
+
+add_executable(test_bitwise ${TESTS_DIR}/test_bitwise.cpp)
+target_link_libraries(test_bitwise PRIVATE CxxScript GTest::gtest_main)
+set_target_properties(test_bitwise PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests
+)
+
+add_executable(test_arrays ${TESTS_DIR}/test_arrays.cpp)
+target_link_libraries(test_arrays PRIVATE CxxScript GTest::gtest_main)
+set_target_properties(test_arrays PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests
+)
+
 # Google Test integration
 include(GoogleTest)
 gtest_discover_tests(test_lexer WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
@@ -169,6 +187,9 @@ gtest_discover_tests(test_multi_file WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 gtest_discover_tests(test_string_concat WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 gtest_discover_tests(test_real_world_app WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 gtest_discover_tests(test_escape_sequences WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+gtest_discover_tests(test_control_flow WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+gtest_discover_tests(test_bitwise WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+gtest_discover_tests(test_arrays WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 
 # Custom target to run all tests
 add_custom_target(run_tests
@@ -176,6 +197,7 @@ add_custom_target(run_tests
     DEPENDS test_lexer test_parser test_interpreter test_error_handling
     test_comprehensive test_external_functions test_multi_file
     test_string_concat test_real_world_app test_escape_sequences
+    test_control_flow test_bitwise test_arrays
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
 )
 
